Fixed info prompt legibility
There are two levels in this game that start with a "tip" explaining game flow
and operation.  That tip was previously using a barely legible font in some
platforms, and was generally small and difficult to read.  Fixed that, using a
clear font, making it larger, and making the buttons prettier.

Also added a top margin to the cells when pressed, which adds a lot more of a
tactile feel to the game I think.  Just a CSS one-liner, so if others find it
offputting it can be removed easily.

--- a/swix/swix.css
+++ b/swix/swix.css
@@ -6,6 +6,13 @@
 	  font-style: normal;
 
 }
+@font-face {
+	font-family: "Neucha";
+	src: url("fonts/Neucha-Regular.woff") format("woff"),
+	     url("fonts/Neucha-Regular.woff2") format("woff2");
+	font-weight: normal;
+	font-style: normal;
+}
 a {
 	text-decoration: none;
 }
@@ -61,6 +68,11 @@ img.embed{ margin: 10px; }
 	top:-64px;
 	left:35px;
 }
+
+#interfaceModules{
+	display : none;
+}
+
 #stepstaken{
 	transform-origin: 0 0;
 	position:absolute;
@@ -179,17 +191,6 @@ a.leftActionButton:hover{
 	background-color: #666;
 }
 
-div.disableHints{
-	width:50%;
-	text-align:right;
-	position:absolute;
-	left:50%;
-	top:50%;
-	line-height:1em;
-	color: #888;
-	font-size: 11px;
-}
-
 div.screenOverlay{
 	width: 100%;
 	height: 100%;
@@ -200,8 +201,18 @@ div.screenOverlay{
 
 }
 
+div.backShading{
+	width: 100%;
+	height: 100%;
+	position: absolute; 
+	top: 0px;
+	left: 0px;
+	background-color : #000;
+	opacity: 0.5;
+}
+
 div.promptWrapper{
-	font-family: 'Coming Soon', cursive;
+	font-family: 'Neucha';
 	text-align:left;
 	position: relative;
 	color: #4b4844;
@@ -209,9 +220,10 @@ div.promptWrapper{
 	border-color: #4b4844;
 	border: solid;
 	background-color: #212121;
-	width: 400px;
+	width: 540px;
 	margin:auto;
 	border-radius: 5px 25px;
+	margin-top: 200px;
 }
 
 div.promptBox{
@@ -219,24 +231,44 @@ div.promptBox{
 	margin:auto;
 	color: #FFF;
 	margin: 1em;
-	font-size: 12px;
+	font-size: 18px;
 }
 
-.promptButton{
-	color:#FFF;
-	background-color: #212121;
-	border-color: #333 #111 #111 #333;
+.colouredButton{
+	color: #272727;
+	background-color: #c7a454;
+	display: inline-block;
+	padding: 0.5em;
+	border-radius: 0.5em;
+	cursor: pointer;
+	box-shadow: 0px 3px #111;
+	margin-bottom: 2px;
+	margin: 0 0 2px 0;
+}
+
+.colouredButton:hover{
+	background-color: #c5a967;
+}
+
+.colouredButton:active{
+	margin: 2px 0 0 0;
+}
+.depressable:active{
+	margin: 2px 0 0 0;
+}
+
+.disableHints {
+	float: right;
 }
 
 h3{
 	font-weight:normal;
-	font-size: 12px;
 	margin-bottom: 0.2em;
 
 }
 
 h2{
-	font-size: 14px;
+	font-size: 20px;
 	font-weight:bold;
 }
 
@@ -373,7 +405,7 @@ div.cellSample{
 
 #creditList {
 	color: #FFF;
-	font-size: 80%;
+	font-size: 60%;
 	text-shadow: 1px 1px #000;
 }
 #creditList a{
